Created posts page and snippet component

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Hello World"
 date: 2023-10-26
-description: "Hello World Code"
+description: "Hello World Code Snippet"
 ---
 
 # Snippet
