Created post page, added syntax highlighting, customized codetitle

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -4,7 +4,10 @@ date: 2023-10-26
 description: "Hello World Code Snippet"
 ---
 
+
 # Snippet
+
+<CodeTitle lang="js" title="hello.js"/>
 
 ```js
 console.log("Hello World");
