Revamp postcard to postlist component

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -2,13 +2,10 @@
 title: "Hello World"
 date: 2023-10-26
 description: "Hello World Code Snippet"
+banner: "/images/posts/helloworld/banner.jpg"
 ---
-
 
 # Snippet
 
-<CodeTitle lang="js" title="hello.js"/>
-
-```js
-console.log("Hello World");
-```
+<CodeTitle lang="js" title="hello.js" />
+```js console.log("Hello World"); ```
