Added darkmode toggle, custom tailwind colors and static metadata

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -8,4 +8,6 @@ banner: "/images/posts/helloworld/banner.jpg"
 # Snippet
 
 <CodeTitle lang="js" title="hello.js" />
-```js console.log("Hello World"); ```
+```js
+console.log("Hello World");
+ ```
