Deleted redundant files and added SEO component to app

--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -7,7 +7,6 @@ banner: "/images/posts/helloworld/banner.jpg"
 
 # Snippet
 
-<CodeTitle lang="js" title="hello.js" />
-```js
+```js:helloworld.js"
 console.log("Hello World");
- ```
+```
